replace toList API usage